force-app/main/default/objects/Maintenance_Phase__c/Maintenance_Phase__c.object-meta.xml
<CustomObject>
    <description>This object is used to Maintenance phase details of the product and asset.</description>
    <label>Maintenance Phase</label>
    <nameField>
        <displayFormat>MP-{0000000}</displayFormat>
        <label>Maintenance Phase</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>