force-app/main/default/objects/Maintenance_Phase__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the asset details.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Maintenance Phase</relationshipLabel>
    <relationshipName>Maintenance_Phase</relationshipName>
    <type>Lookup</type>
</CustomField>