force-app/main/default/objects/Maintenance_Phase__c/fields/Ext_Maintenance_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Ext_Maintenance_End_Date__c</fullName>
    <description>This field is used to store the extended maintenance phase end date.</description>
    <label>Ext Maintenance End Date</label>
    <type>Date</type>
</CustomField>