force-app/main/default/objects/Maintenance_Phase__c/fields/Ext_Maintenance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ext_Maintenance_Start_Date__c</fullName>
    <description>This field is used to store the extended maintenance phase start date.</description>
    <label>Ext Maintenance Start Date</label>
    <type>Date</type>
</CustomField>