force-app/main/default/objects/Maintenance_Phase__c/fields/Lifecycle_No__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_No__c</fullName>
    <label>Lifecycle No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>