force-app/main/default/objects/Maintenance_Phase__c/fields/Maintenance_Phase2_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Phase2_Start_Date__c</fullName>
    <description>This field is used to store the maintenance phase2 start date.</description>
    <label>Maintenance Phase2 Start Date</label>
    <type>Date</type>
</CustomField>