force-app/main/default/objects/Maintenance_Phase__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the product details.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Maintenance Phase</relationshipLabel>
    <relationshipName>Maintenance_Phase</relationshipName>
    <type>Lookup</type>
</CustomField>