force-app/main/default/objects/Maintenance_Phase__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the project phase details.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Maintenance Phase</relationshipLabel>
    <relationshipName>Maintenance_Phase</relationshipName>
    <type>Lookup</type>
</CustomField>