force-app/main/default/objects/Maintenance_Phase__c/fields/Sales_Phase_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Phase_End_Date__c</fullName>
    <description>This field is used to store the sales phase end date.</description>
    <label>Sales Phase End Date</label>
    <type>Date</type>
</CustomField>