force-app/main/default/objects/Maintenance_Phase__c/fields/Sub_Item__c.field-meta.xml
<CustomField>
    <fullName>Sub_Item__c</fullName>
    <label>Sub-Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>