force-app/main/default/objects/Maintenance_Phase__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Item__c</columns>
    <columns>Sub_Item__c</columns>
    <columns>Lifecycle_No__c</columns>
    <columns>Sales_Phase_Start_Date__c</columns>
    <columns>Sales_Phase_End_Date__c</columns>
    <columns>Maintenance_Phase1_Start_Date__c</columns>
    <columns>Maintenance_Phase1_End_Date__c</columns>
    <columns>Maintenance_Phase2_Start_Date__c</columns>
    <columns>Maintenance_Phase2_End_Date__c</columns>
    <columns>Ext_Maintenance_End_Date__c</columns>
    <columns>Ext_Maintenance_Start_Date__c</columns>
    <columns>Asset__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>